--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <html>
     <!-- find the area of a rectangle, given the length and width -->
-    <script>
-        let length = +prompt("enter the length");
-        let width = +prompt("enter the width");
-        let result;
-
-        function area() {
-          result = length * width;
-          console.log(result);
-        }
-        area();
+    <script src="rec.js"></script>
+    <script> 
+       alert(area());
     </script>
 </html>
